--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,14 @@
   display:flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom:10%;
+  background-color:#D4C0BC;
 }
 .destination{
   width:30%;
   text-align: justify;
+
+
 }
 .destination img {
   width:100%;
